compiler-plugin/src/testData/reference/errors/NotInitBlock.kt
package reference.errors

@ExportReferences
object Test : BaseReferenceExporter() {
    <!SYMBOL_EXPORT_REFERENCE_NOT_INIT_BLOCK!>val x = 1<!>
}
